# rust-from-python

./: .flake8  .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/example/: __init__.py
