[package]
name = "myrustlib"
version = "0.1.0"
authors = ["Takeru Saito <takelushi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mylib"
crate-type = ["cdylib"]  # cdylib, rlib

[dependencies]
[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]
