[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
isort = "^5.7.0"
mypy = "^0.800"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
