[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "*"
isort = "*"
mypy = "*"
flake8 = "*"
maturin = "^0.9.0"
cffi = "^1.14.4"

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["maturin", "cffi"]
build-backend = "maturin"

[tool.maturin]
bindings = "cffi"
manylinux = "off"

[tool.isort]
profile = "google"
line_length = "79"
force_single_line = false
known_first_party = ["example"]
